# crawling-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: mempools-mvp-architecture  sample_config.json
config/: prod-config.json
crates/alert-service/: Cargo.toml
crates/alert-service/src/: lib.rs  storage.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: cosmos.rs  eth.rs  lib.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: lib.rs
crates/chain-service/: Cargo.toml
crates/crawler-service/: Cargo.toml
crates/crawler-service/src/: cosmos_crawler.rs  cosmos_evm_crawler.rs  eth_crawler.rs  lib.rs
crates/db-entities/: Cargo.toml
crates/db-entities/src/: admin.rs  alert_notification.rs  chain.rs  crawler.rs  destination_registration_proposal.rs  jwt.rs  lib.rs  prelude.rs  processed_blocks.rs  registration_token.rs  telegram_chat_id.rs  user_alert.rs  user_destination.rs
crates/db-migration/: Cargo.toml
crates/db-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230318_044041_add_chains.rs  m20230321_082824_failed_tx_alert.rs  m20230323_170133_add_chain_data.rs  m20230330_120032_add_crawler_table.rs  m20230405_044439_adding_timestamps.rs  m20230405_130847_notification_object.rs  m20230613_200442_response_time.rs  m20230725_204915_jwt_management.rs  m20230731_204843_client_webhook_endpoint.rs  m20230731_210652_client_id.rs  m20230731_220915_alert_client_id.rs
crates/filter-service/: Cargo.toml
crates/filter-service/src/: lib.rs
crates/gateway-service/: Cargo.toml
crates/gateway-service/src/: admin.rs  lib.rs
crates/mempools-api/: Cargo.toml  build.rs
crates/mempools-api/proto/: api.proto
crates/mempools-api/src/: lib.rs
crates/notification-service/: Cargo.toml
crates/notification-service/src/: lib.rs  storage.rs
crates/request-validation/: Cargo.toml
crates/request-validation/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  interceptors.rs  lib.rs  main.rs  test_data.rs
crates/server/tests/: test.rs
crates/util/: Cargo.toml
crates/util/src/: clients.rs  convert.rs  lib.rs  service_registry.rs
deployments/dockerfiles/prod/: Dockerfile
docs/: Implementation.md  db.md  deployment_gcp.md  deployments.md
