[workspace]
members = ["crates/*"]

[workspace.dependencies]
tonic = { version = "0.8.0", features = ["tls", "tls-roots"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
cosmrs = { version = "0.11.0", features = ["grpc", "cosmwasm"] }
tonic-web = "0.5.0"
jsonwebtokens-cognito = "0.1.1"
jsonwebtoken = "8.3.0"
serde = "1.0.162"
serde_json = "1.0.96"
hex = "0.4.3"
base64 = "0.21.0"
reqwest = {version="0.11.17", features=["blocking"]}
log = "0.4.17"
env_logger = "0.10.0"
prost = "0.11"
tonic-build = "0.8"
tower-http = { version = "0.4.0", features = ["cors", "catch-panic"] }
tonic-reflection = "0.6.0"
rand = "0.8.5"
email_address = "0.2.4"
url = "2.3.1"
cw20-base = "1.0.1"
tokio-stream = "0.1.14"
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "sea-orm-internal"
] }
sea-orm-migration = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-native-tls"
] }
tower = "0.4.13"
web3 = "0.18.0"
dyn-clone = "1.0.11"
serenity = "0.11.5"
futures = "0.3.30"