[package]
name = "alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mempools-api = { path = "../mempools-api" }
util = { path = "../util" }
cosmrs.workspace = true
web3.workspace = true
serde_json.workspace = true
base64.workspace = true
cw20-base.workspace = true