[package]
name = "filter-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mempools-api = { path = "../mempools-api" }
util = { path = "../util" }
alerts = { path = "../alerts" }
tonic.workspace = true
tokio.workspace = true
log.workspace = true