[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mempools-api = { path = "../mempools-api" }
util = { path = "../util" }
request-validation = { path = "../request-validation" }
tonic.workspace = true
jsonwebtoken.workspace = true
sea-orm.workspace = true
db-entities = { version = "0.1.0", path = "../db-entities" }
uuid = { version = "1.3.3", features = ["v4"] }
reqwest.workspace = true