[package]
name = "request-validation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mempools-api = { path = "../mempools-api" }
util = { path = "../util" }
tonic.workspace = true
email_address.workspace = true
url.workspace = true