[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
alert-service = { path = "../alert-service" }
auth-service = { path = "../auth-service" }
crawler-service = { path = "../crawler-service" }
filter-service = { path = "../filter-service" }
gateway-service = { path = "../gateway-service" }
notification-service = { path = "../notification-service" }
chain-service = { path = "../chain-service" }
mempools-api = { path = "../mempools-api" }
db-migration = { path = "../db-migration" }
db-entities = { path = "../db-entities" }
util = { path = "../util" }
tonic.workspace = true
tokio.workspace = true
# lettre.workspace = true
tonic-web.workspace = true
jsonwebtokens-cognito.workspace = true
serde.workspace = true
base64.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
tonic-reflection.workspace = true
sea-orm.workspace = true
tower.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
futures = "0.3.28"

[features]
default = ["dev"]
prod = ["auth", "cors"]
dev = ["cors", "reflection"]
auth = []
cors = []
reflection = []
